--- a/src/components/Home/organism/styles.css
+++ b/src/components/Home/organism/styles.css
@@ -1,3 +1,11 @@
+.container-home {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+}
+
 .anime-container {
   width: 120px;
   height: 160px;
