--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,8 +27,8 @@ button {
 }
 
 video {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 320px) {
